# omnix-hub

./: .gitignore  OmniX_Hub.lua  OmniX_XRay_NightVision.mcpack  README.md  generate_textures.py
OmniX_XRay_NightVision/: LEIA-ME.txt  blocks.json  manifest.json
OmniX_XRay_NightVision/textures/: terrain_texture.json
backend/: Cargo.toml
backend/src/: main.rs
backend/src/core/: advanced_monitor.rs  background_service_manager.rs  config.rs  database.rs  event_correlator.rs  event_deduplicator.rs  event_pipeline.rs  health_status_manager.rs  heuristics.rs  log_rotation_manager.rs  mod.rs  quarantine.rs  reports.rs  risk_engine.rs  rule_engine.rs  scanner.rs  signatures.rs  update_history.rs  updater.rs
flutter_app/: pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/screens/: dashboard_screen.dart  events_screen.dart  quarantine_screen.dart  risk_screen.dart  scan_screen.dart  settings_screen.dart  update_screen.dart
flutter_app/lib/services/: rust_bridge.dart  update_service.dart
flutter_app/lib/widgets/: risk_indicator.dart  security_status_card.dart
omnishield/: README.md  __init__.py  __main__.py  main.py  requirements.txt  setup.py
omnishield/api/: server.py
omnishield/config/: settings.py
omnishield/core/: entropy.py  file_analyzer.py  heuristics.py  monitor.py  quarantine.py  scanner.py  signatures.py  threat_db.py
omnishield/signatures/: malware_signatures.json
omnishield/tests/: test_scanner.py
omnishield/ui/: index.html
omnishield/ui/css/: omnishield.css
omnishield/ui/js/: omnishield.js
