[package]
name = "omnix-hub"
version = "0.1.0"
edition = "2021"
description = "OmniX Hub - Defensive file security scanner"

[dependencies]
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
thiserror = "1"
